--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "heroicons": "^2.0.18",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
+    "react-phone-number-input": "^3.3.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-saga": "^1.2.3",
     "web-vitals": "^2.1.4"
