--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "react-yandex-maps": "^4.6.0",
     "redux": "^4.2.1",
     "redux-saga": "^1.2.3",
+    "tw-elements-react": "^1.0.0-alpha1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
