--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "heroicons": "^2.0.18",
+    "i18next": "^23.4.6",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
+    "react-i18next": "^13.2.1",
     "react-icons": "^4.10.1",
     "react-phone-number-input": "^3.3.0",
     "react-redux": "^8.1.1",
